# partscout

./: .gitignore  CLAUDE.md  alembic.ini  pyproject.toml
partscout/: config.py  scheduler.py
partscout/adapters/: base.py  biker_ee.py  nettimoto.py  sporthoj.py  ss_lv.py  tori.py
partscout/db/: models.py  session.py
partscout/db/migrations/: env.py
partscout/digest/: emailer.py
partscout/extraction/: extractor.py  llm.py  prompts.py  schemas.py
partscout/matching/: embeddings.py  matcher.py  normalizer.py  verifier.py
scripts/: backtest.py  run_pipeline.py
tests/: conftest.py  extraction_samples.txt
tests/fixtures/forum/: CBR 1000F käyntiongelma, auttakaa viisaammat! _ .ORG!.html  O_ Suzuki LS650 Savage kraami -.html  O_ VTX1800 tagaamordid -.html  SS.COM Rezerves daļas un aksesuāri - Riteņi Pērku lielo aizmugurējo ratu no Rīgas Tikai varbūt sērijām. nāca - Sludinājumi.html
tests/fixtures/nettimoto/: Nettivaraosa - Honda Cb1000r 2010 - Powercommander V 2009-2010 - Motorcycle spare parts and accessories - Nettivaraosa.html  Nettivaraosa - Suzuki Ts 1985 - 125 - Motorcycle spare parts and accessories - Nettivaraosa.html  Nettivaraosa - Yamaha 750 - Motorcycle spare parts and accessories - Nettivaraosa.html
tests/fixtures/sporthoj/: Sporthoj - Aprilia el Suzuki rs-rgv kopes (kopes).html  Sporthoj - SIDI Cobra strl 45 (saljes).html  (+3 more)
tests/test_adapters/: test_biker_ee.py  test_nettimoto.py  test_sporthoj.py  test_ss_lv.py  test_tori.py
tests/test_extraction/: labeled.jsonl  test_extractor.py
tests/test_matching/: golden_pairs.jsonl  test_matcher.py
(+10 files in other folders)
